crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_constructor_bad_tag.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let tag#22 : int = false in
let fields#21 : list Data = trace "fields evaluated" in (con (list data) [(I 7)]) in
let constructor#23 : Data = constrData tag#22 fields#21 in
fstPair (unConstrData constructor#23)
--- unoptimized UPLC
(program 1.1.0
  [(lam tag_22
    [(lam fields_21
      [(lam constructor_23
        [(force (force (builtin fstPair))) [(builtin unConstrData) constructor_23]])
        [[(builtin constrData) tag_22] fields_21]])
      (force
        [[(force (builtin trace)) (con string "fields evaluated")]
          (delay (con (list data) [(I 7)]))])])
    (con bool False)])
--- optimized Core
let tag#1 : int = false in
let fields#2 : list Data = trace "fields evaluated" in (con (list data) [(I 7)]) in
let constructor#3 : Data = constrData tag#1 fields#2 in
let anf#4 : 'erased = unConstrData constructor#3 in
tag#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_9
    [(lam tag_5
      [(lam fields_6
        [(lam constructor_7 [(lam anf_8 tag_5) [(builtin unConstrData) constructor_7]])
          [[(builtin constrData) tag_5] fields_6]])
        (force
          [[builtin_9 (con string "fields evaluated")] (delay (con (list data) [(I 7)]))])])
      (con bool False)])
    (force (builtin trace))])
--- isolated pass
--- core before
let tag#22 : int = false in
let fields#21 : list Data = trace "fields evaluated" in (con (list data) [(I 7)]) in
let constructor#23 : Data = constrData tag#22 fields#21 in
fstPair (unConstrData constructor#23)
--- uplc before
(program 1.1.0
  [(lam tag_22
    [(lam fields_21
      [(lam constructor_23
        [(force (force (builtin fstPair))) [(builtin unConstrData) constructor_23]])
        [[(builtin constrData) tag_22] fields_21]])
      (force
        [[(force (builtin trace)) (con string "fields evaluated")]
          (delay (con (list data) [(I 7)]))])])
    (con bool False)])
--- core after
let tag#22 : int = false in
let fields#21 : list Data = trace "fields evaluated" in (con (list data) [(I 7)]) in
let constructor#23 : Data = constrData tag#22 fields#21 in
tag#22
--- uplc after
(program 1.1.0
  [(lam tag_22
    [(lam fields_21
      [(lam constructor_23 tag_22) [[(builtin constrData) tag_22] fields_21]])
      (force
        [[(force (builtin trace)) (con string "fields evaluated")]
          (delay (con (list data) [(I 7)]))])])
    (con bool False)])
--- result
error: Runtime(TypeMismatch(Integer, Boolean(false)))
--- logs
["fields evaluated"]
