crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_constructor_fields.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let tag#22 : int = 0 in
let fields#21 : list Data = (con (list data) [(I 7)]) in
let constructor#23 : Data = constrData tag#22 fields#21 in
let payload#24 : 'erased = unConstrData constructor#23 in
sndPair payload#24
--- unoptimized UPLC
(program 1.1.0
  [(lam tag_22
    [(lam fields_21
      [(lam constructor_23
        [(lam payload_24 [(force (force (builtin sndPair))) payload_24])
          [(builtin unConstrData) constructor_23]])
        [[(builtin constrData) tag_22] fields_21]])
      (con (list data) [(I 7)])])
    (con integer 0)])
--- optimized Core
let fields#2 : list Data = (con (list data) [(I 7)]) in
let constructor#3 : Data = constrData 0 fields#2 in
let payload#4 : 'erased = unConstrData constructor#3 in
fields#2
--- optimized UPLC
(program 1.1.0
  [(lam fields_1
    [(lam constructor_5
      [(lam payload_6 fields_1) [(builtin unConstrData) constructor_5]])
      [[(builtin constrData) (con integer 0)] fields_1]])
    (con (list data) [(I 7)])])
--- isolated pass
--- core before
let tag#22 : int = 0 in
let fields#21 : list Data = (con (list data) [(I 7)]) in
let constructor#23 : Data = constrData tag#22 fields#21 in
let payload#24 : 'erased = unConstrData constructor#23 in
sndPair payload#24
--- uplc before
(program 1.1.0
  [(lam tag_22
    [(lam fields_21
      [(lam constructor_23
        [(lam payload_24 [(force (force (builtin sndPair))) payload_24])
          [(builtin unConstrData) constructor_23]])
        [[(builtin constrData) tag_22] fields_21]])
      (con (list data) [(I 7)])])
    (con integer 0)])
--- core after
let tag#22 : int = 0 in
let fields#21 : list Data = (con (list data) [(I 7)]) in
let constructor#23 : Data = constrData tag#22 fields#21 in
let payload#24 : 'erased = unConstrData constructor#23 in
fields#21
--- uplc after
(program 1.1.0
  [(lam tag_22
    [(lam fields_21
      [(lam constructor_23
        [(lam payload_24 fields_21) [(builtin unConstrData) constructor_23]])
        [[(builtin constrData) tag_22] fields_21]])
      (con (list data) [(I 7)])])
    (con integer 0)])
--- result
(con (list data) [(I 7)])
--- logs
[]
