crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_constructor_wrong_variant.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let constructor#23 : Data = (con data (I 7)) in
let payload#24 : 'erased = unConstrData constructor#23 in
trace "after decoding" in constrData (fstPair payload#24) (sndPair payload#24)
--- unoptimized UPLC
(program 1.1.0
  [(lam constructor_23
    [(lam payload_24
      (force
        [[(force (builtin trace)) (con string "after decoding")]
          (delay
            [[(builtin constrData) [(force (force (builtin fstPair))) payload_24]]
              [(force (force (builtin sndPair))) payload_24]])]))
      [(builtin unConstrData) constructor_23]])
    (con data (I 7))])
--- optimized Core
let constructor#1 : Data = (con data (I 7)) in
let payload#2 : 'erased = unConstrData constructor#1 in
trace "after decoding" in let anf#3 : int = fstPair payload#2 in
let anf#4 : list Data = sndPair payload#2 in
constructor#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_9
    [(lam builtin_10
      [(lam builtin_11
        [(lam constructor_5
          [(lam payload_6
            (force
              [[builtin_11 (con string "after decoding")]
                (delay
                  [(lam anf_7 [(lam anf_8 constructor_5) [builtin_9 payload_6]])
                    [builtin_10 payload_6]])]))
            [(builtin unConstrData) constructor_5]])
          (con data (I 7))])
        (force (builtin trace))])
      (force (force (builtin fstPair)))])
    (force (force (builtin sndPair)))])
--- isolated pass
--- core before
let constructor#23 : Data = (con data (I 7)) in
let payload#24 : 'erased = unConstrData constructor#23 in
trace "after decoding" in constrData (fstPair payload#24) (sndPair payload#24)
--- uplc before
(program 1.1.0
  [(lam constructor_23
    [(lam payload_24
      (force
        [[(force (builtin trace)) (con string "after decoding")]
          (delay
            [[(builtin constrData) [(force (force (builtin fstPair))) payload_24]]
              [(force (force (builtin sndPair))) payload_24]])]))
      [(builtin unConstrData) constructor_23]])
    (con data (I 7))])
--- core after
let constructor#23 : Data = (con data (I 7)) in
let payload#24 : 'erased = unConstrData constructor#23 in
trace "after decoding" in constructor#23
--- uplc after
(program 1.1.0
  [(lam constructor_23
    [(lam payload_24
      (force
        [[(force (builtin trace)) (con string "after decoding")] (delay constructor_23)]))
      [(builtin unConstrData) constructor_23]])
    (con data (I 7))])
--- result
error: Runtime(MalFormedData(Integer(7)))
--- logs
[]
