crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_integer_bound.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let x#1 : int = trace "once" in 7 in
let encoded#2 : Data = iData x#1 in
let alias#3 : Data = encoded#2 in
trace "after encoding" in unIData alias#3
--- unoptimized UPLC
(program 1.1.0
  [(lam x_1
    [(lam encoded_2
      [(lam alias_3
        (force
          [[(force (builtin trace)) (con string "after encoding")]
            (delay [(builtin unIData) alias_3])]))
        encoded_2])
      [(builtin iData) x_1]])
    (force [[(force (builtin trace)) (con string "once")] (delay (con integer 7))])])
--- optimized Core
let x#4 : int = trace "once" in 7 in
let encoded#5 : Data = iData x#4 in
trace "after encoding" in x#4
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam x_1
      [(lam encoded_2 (force [[builtin_3 (con string "after encoding")] (delay x_1)]))
        [(builtin iData) x_1]])
      (force [[builtin_3 (con string "once")] (delay (con integer 7))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#1 : int = trace "once" in 7 in
let encoded#2 : Data = iData x#1 in
let alias#3 : Data = encoded#2 in
trace "after encoding" in unIData alias#3
--- uplc before
(program 1.1.0
  [(lam x_1
    [(lam encoded_2
      [(lam alias_3
        (force
          [[(force (builtin trace)) (con string "after encoding")]
            (delay [(builtin unIData) alias_3])]))
        encoded_2])
      [(builtin iData) x_1]])
    (force [[(force (builtin trace)) (con string "once")] (delay (con integer 7))])])
--- core after
let x#1 : int = trace "once" in 7 in
let encoded#2 : Data = iData x#1 in
let alias#3 : Data = encoded#2 in
trace "after encoding" in x#1
--- uplc after
(program 1.1.0
  [(lam x_1
    [(lam encoded_2
      [(lam alias_3
        (force [[(force (builtin trace)) (con string "after encoding")] (delay x_1)]))
        encoded_2])
      [(builtin iData) x_1]])
    (force [[(force (builtin trace)) (con string "once")] (delay (con integer 7))])])
--- result
(con integer 7)
--- logs
["once", "after encoding"]
